<resources>
    <string name="app_name">Xzaminer</string>
    <string name="app_launcher_name">Xzaminer</string>
    <string name="unable_to_load_content">Unable to load content. Please check internet and try again.</string>
    <string name="finish_quiz">Finish Quiz</string>
    <string name="marked_later">Show Marked Later Questions</string>
    <string name="show_all">Show All</string>
    <string name="pick_category">Pick Category</string>
    <string name="home">Home</string>
    <string name="purchases">Purchases</string>
    <string name="title_activity_import_question_bank">Import Question Bank</string>
    <string name="logout">Logout</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_repeat_password">Repeat Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="loading">Please Wait...</string>
    <string name="xzaminer_intro_text">Stay sharp by accessing over 40,000 Multiple Choice Questions, Study Material, Videos, Audio and Courses tailored to every profession...</string>
    <string name="login_signup">Login / Signup</string>
    <string name="title_activity_import_study_material">Import Study Material</string>
    <string name="myprofile">My Profile</string>
    <string name="download_videos">Download Videos</string>
    <string name="maange_categories">Manage Categories</string>
    <string name="finish">Finish</string>
    <string name="add">Add</string>
    <string name="manage_users">Manage Users</string>
    <string name="remove_all_questions">Remove All Questions</string>
    <string name="import_questions">Import Questions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="reorder">Reorder</string>
</resources>
