<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/manage_add"
        android:icon="@drawable/ic_add"
        android:title="@string/add"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/manage_finish"
        android:icon="@drawable/ic_check"
        android:title="@string/finish"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/manage_remove_all"
        android:icon="@drawable/ic_remove_all"
        android:title="@string/remove_all_questions"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/manage_import_questions"
        android:icon="@drawable/ic_upload"
        android:title="@string/import_questions"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/manage_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        android:visible="false"
        app:showAsAction="ifRoom"/>
</menu>
