<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_back"
    android:animateLayoutChanges="true">

    <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/welcome_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

        <ImageView
                android:layout_marginTop="48dp"
                android:layout_width="128dp"
                android:layout_height="108dp"
                android:src="@mipmap/ic_launcher"
                android:layout_gravity="center_horizontal"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:gravity="start|center_vertical"
                android:textSize="20sp"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:lineSpacingExtra="8dp"
                android:text="@string/xzaminer_intro_text" />

        <Space
                android:layout_width="96dp"
                android:layout_height="96dp"/>

        <Button
                android:id="@+id/signin_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_margin="4dp"
                android:layout_gravity="bottom|end"
                android:text="@string/login_signup"
                android:theme="@style/TranslucentButton" />

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="1">

        <android.support.v7.widget.CardView
                android:id="@+id/card_view"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_weight="0.9"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:layout_margin="4dp"
                card_view:cardCornerRadius="12dp"
                >

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="16dp">

                <ImageView
                        android:id="@+id/icon"
                        android:layout_width="128dp"
                        android:layout_height="108dp"
                        android:src="@mipmap/ic_launcher" />

                <EditText
                        android:id="@+id/fieldEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress" />

                <EditText
                        android:id="@+id/fieldName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:visibility="gone"
                        tools:visibility="visible"/>

                <EditText
                        android:id="@+id/fieldPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword" />

                <EditText
                        android:id="@+id/fieldPasswordRepeat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_repeat_password"
                        android:inputType="textPassword"
                        android:visibility="gone"
                        tools:visibility="visible"/>

                <LinearLayout
                        android:id="@+id/emailPasswordButtons"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/emailPasswordFields"
                        android:orientation="horizontal"
                        android:gravity="center">

                    <Button
                            android:id="@+id/emailSignInButton"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/sign_in"
                            android:theme="@style/ThemeOverlay.MyDarkButton" />

                    <Button
                            android:id="@+id/emailCreateAccountButton"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/create_account"
                            android:theme="@style/ThemeOverlay.MyDarkButton" />
                </LinearLayout>

                <TextView
                        android:id="@+id/forgotPasswordButton"
                        android:layout_below="@+id/emailPasswordButtons"
                        android:layout_width="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_height="wrap_content"
                        android:layout_margin="24dp"
                        android:text="@string/forgot_password" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </android.support.v7.widget.LinearLayoutCompat>

</LinearLayout>
